--- a/.babelrc
+++ b/.babelrc
@@ -1,17 +1,17 @@
 {
-  "presets": [
-    "env",
-    "react",
-    "stage-2"
-  ],
+  "presets": ["env", "react", "stage-2"],
   "plugins": [
-    "universal-import"
+    ["universal-import"],
+    [
+      "babel-plugin-styled-components",
+      {
+        "ssr": true
+      }
+    ]
   ],
   "env": {
     "development": {
-      "plugins": [
-        "react-hot-loader/babel"
-      ]
+      "plugins": ["react-hot-loader/babel"]
     }
   }
 }
