--- a/package.json
+++ b/package.json
@@ -5,21 +5,15 @@
   "main": "server/index.js",
   "license": "MIT",
   "scripts": {
-    "start":
-      "npm run clean && cross-env NODE_ENV=development babel-watch server/index.js",
+    "start": "npm run clean && cross-env NODE_ENV=development babel-watch server/index.js",
     "start:prod": "npm run build && npm run serve",
     "serve": "cross-env NODE_ENV=production node buildServer/index.js",
-    "build":
-      "npm run build:client && npm run build:server && npm run build:node",
-    "build:client":
-      "rimraf buildClient && cross-env NODE_ENV=production webpack --progress -p --config webpack/client.prod.js",
-    "build:server":
-      "rimraf buildServer && cross-env NODE_ENV=production webpack --progress -p --config webpack/server.prod.js",
-    "build:node":
-      "cross-env NODE_ENV=production babel server/index.js -o buildServer/index.js",
+    "build": "npm run build:client && npm run build:server && npm run build:node",
+    "build:client": "rimraf buildClient && cross-env NODE_ENV=production webpack --progress -p --config webpack/client.prod.js",
+    "build:server": "rimraf buildServer && cross-env NODE_ENV=production webpack --progress -p --config webpack/server.prod.js",
+    "build:node": "cross-env NODE_ENV=production babel server/index.js -o buildServer/index.js",
     "clean": "rimraf buildClient buildServer",
-    "format":
-      "prettier --single-quote --semi=false --write '{src,server,webpack}/**/*.js' && npm run lint"
+    "format": "prettier --single-quote --semi=false --write '{src,server,webpack}/**/*.js' && npm run lint"
   },
   "dependencies": {
     "babel-polyfill": "^6.23.0",
@@ -37,6 +31,7 @@
     "redux-devtools-extension": "^2.13.2",
     "redux-first-router": "^1.9.15",
     "redux-first-router-link": "^1.1.4",
+    "styled-components": "^3.1.6",
     "webpack-flush-chunks": "^1.1.22"
   },
   "devDependencies": {
@@ -45,6 +40,7 @@
     "babel-core": "^6.24.0",
     "babel-eslint": "^8.0.1",
     "babel-loader": "^7.1.1",
+    "babel-plugin-styled-components": "^1.5.0",
     "babel-plugin-universal-import": "^1.2.2",
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.23.0",
